# dd2610-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile.training  LICENSE  README.md  accelerate_config.yaml  backbone.py  config.toml  docker-compose.yml  docker-run.sh  evaluate.py  launch_distributed.sh  main.py  model.py  nginx-tensorboard.conf  pyproject.toml  start_tensorboard.sh  utils.py
